k8s/Ingress Controller/ingress-hosts.yaml
#---------------------------------------------------------------------
# Manifest File to create Ingess Rules for Hosts
#
# Copyleft (c) by Anton Dmytrenko 2023
#---------------------------------------------------------------------
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hosts

spec:
  rules:
  - host: www.keniktest.com.ua
    http:
      paths:
        - backend:
           serviceName: main
           servicePort: 80

  - host: web1.keniktest.com.ua
    http:
      paths:
        - backend:
           serviceName: web1
           servicePort: 80

  - host: web2.keniktest.com.ua
    http:
      paths:
        - backend:
           serviceName: web2
           servicePort: 80

  - host: cat.keniktest.com.ua
    http:
      paths:
        - backend:
           serviceName: tomcat
           servicePort: 8080
